samples/_failures_safe/1761165847_05fc2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_528861dd.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_528861dd.c:185:18: error: expected ‘)’ at end of input
  185 |         if (graph
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_528861dd.c:185:9: error: expected declaration or statement at end of input
  185 |         if (graph
      |         ^~
./samples/SAFE/__tmp_528861dd.c:185:9: error: expected declaration or statement at end of input
